# xrootd

./: setup.sh
cmake/: XRootDOSDefs.cmake
packaging/rhel/: xrootd.spec.in
src/: CMakeLists.txt  XrdXml.cmake
src/XrdCl/: XrdClLocalFileHandler.cc  XrdClStatus.cc  XrdClStream.hh  XrdClXRootDMsgHandler.cc  XrdClXRootDTransport.cc  XrdClXRootDTransport.hh
src/XrdEc/: CMakeLists.txt  XrdEcBlock.cc  XrdEcBlock.hh  XrdEcBlockIO.cc  XrdEcBlockIO.hh  XrdEcBlockPool.hh  XrdEcBlockReader.cc  XrdEcBlockReader.hh  XrdEcCallbackWrapper.hh  XrdEcClientPlugIn.cc  XrdEcClientPlugIn.hh  XrdEcClientPlugInFactory.cc  XrdEcConfig.hh  XrdEcDataObject.cc  XrdEcDataObject.hh  XrdEcDataStore.cc  XrdEcDataStore.hh  XrdEcEosAdaptor.hh  XrdEcLogger.hh  XrdEcMetadataProvider.cc  XrdEcMetadataProvider.hh  XrdEcObjCfg.hh  XrdEcObjInterfaces.hh  XrdEcRandomRead.cc  XrdEcRandomRead.hh  XrdEcRdBuff.hh  XrdEcReadBlock.cc  XrdEcReadBlock.hh  XrdEcRedundancyProvider.cc  XrdEcRedundancyProvider.hh  XrdEcRepairManager.hh  XrdEcScheduleHandler.cc  XrdEcStripeReader.cc  XrdEcStripeReader.hh  XrdEcStrmWriter.cc  XrdEcStrmWriter.hh  XrdEcThreadPool.hh  XrdEcTruncate.cc  XrdEcTruncate.hh  XrdEcUtilities.cc  (+4 more)
src/XrdEc/v2zip/: XrdEcConfig.hh  XrdEcDataObject.cc  XrdEcDataObject.hh  XrdEcObjCfg.hh  XrdEcScheduleHandler.cc  XrdEcScheduleHandler.hh  XrdEcUtilities.hh  XrdEcWrtBuff.hh
src/XrdEcOld/: XrdEcClientPlugInFactory.hh  XrdEcConfig.hh  XrdEcDataObject.cc  XrdEcDataObject.hh  XrdEcEosAdaptor.hh  XrdEcLogger.hh  XrdEcRandomRead.cc  XrdEcRandomRead.hh  XrdEcRdBuff.hh  XrdEcReadBlock.hh  XrdEcScheduleHandler.cc  XrdEcScheduleHandler.hh  XrdEcTruncate.cc  XrdEcTruncate.hh
src/XrdEcOld/v2zip/: XrdEcDataObject.cc  XrdEcRedundancyProvider.cc  XrdEcRedundancyProvider.hh  XrdEcThreadPool.hh  XrdEcUtilities.cc  XrdEcZipUtilities.hh
src/XrdFec/: XrdFecChunkReader.cc  XrdFecChunkReader.hh  XrdFecChunkWriter.cc  XrdFecChunkWriter.hh  XrdFecDir.cc  XrdFecDir.hh  XrdFecError.hh  XrdFecFile.cc  XrdFecFile.hh  XrdFecRedundancyProvider.cc  XrdFecRedundancyProvider.hh  XrdFecStripeReader.cc  XrdFecStripeReader.hh  XrdFecStripeSyncHandler.cc  XrdFecStripeSyncHandler.hh  XrdFecStripeWriter.cc  XrdFecStripeWriter.hh  XrdFecSys.cc  XrdFecSys.hh
src/XrdFec/isa-l/: erasure_code.h
src/XrdOfs/: XrdOfs.hh
src/XrdSfs/: XrdSfsInterface.hh
src/XrdXrootd/: XrdXrootdFile.cc  XrdXrootdFile.hh  XrdXrootdProtocol.cc  XrdXrootdProtocol.hh  XrdXrootdResponse.hh  XrdXrootdXeq.cc  XrdXrootdXeqFAttr.cc
src/api_test/: Base.hh  BlockAllocator.hh  CMakeLists.txt  Derived.cc  Derived.hh  PlacementHandler.cc  PlacementHandler.hh  StreamSimulator.cc  StreamSimulator.hh  XrdEcRdWrtStreamTest.hh  clean_objs.sh  create_hba_links.sh  epn_load_gen.cc  gen_hbas.sh  gen_urls.sh  ls_mount_per_hba.sh  open_xrd_ports.sh  parse_logs.py  throughput_test.cc  throughput_test_fixed.cc  xrdec2_test.cc  xrdec_test.cc
tests/XrdClTests/tls/: CMakeLists.txt  xrdcl-tls.cc
